commit to switch branch

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   </head>
 
   <body>
-    <h1>blair</h1>
-    <h2><a href="https://github.com/dogmom3">Github</a></h2>
+    <h1>waldo</h1>
+    <h2><a href="https://github.com/github">Github</a></h2>
   </body>
   </html>
     
